# dockerized-poetry

./: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/hello_world/: __main__.py
src/my_project/: __main__.py  log.py
